@startuml

title __MATH's Class Diagram__\n

  namespace enstabretagne.base {
    namespace math {
      class enstabretagne.base.math.Diagonal3DMatrix {
          - x : double
          - y : double
          - z : double
          + Diagonal3DMatrix()
          + dot()
          + getX()
          + getY()
          + getZ()
          + inverse()
          + setX()
          + setY()
          + setZ()
          - Diagonal3DMatrix()
      }
    }
  }
  

  namespace enstabretagne.base {
    namespace math {
      class enstabretagne.base.math.MoreRandom {
          {static} + globalSeed : long
          {static} + serialVersionUID : long
          {static} - initialSeed : long
          + MoreRandom()
          + MoreRandom()
          + getSeed()
          {static} + main()
          + nextExp()
          + nextTriangle()
          + nextUniform()
          + nextUniform()
          + randomize()
          + setSeed()
          {static} - doTest()
      }
    }
  }
  

  namespace enstabretagne.base {
    namespace math {
      class enstabretagne.base.math.PortableRandom {
          {static} - serialVersionUID : long
          + PortableRandom()
      }
    }
  }
  

  namespace enstabretagne.base {
    namespace math {
      class enstabretagne.base.math.Randomizer {
          {static} ~ ProbMax : double
          {static} ~ ProbMin : double
          {static} + GetSeed()
          + RandomGeneratorType()
          + Randomizer()
      }
    }
  }
  

  enstabretagne.base.math.MoreRandom -up-|> java.util.Random
  enstabretagne.base.math.PortableRandom -up-|> java.util.Random


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
